--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,40 @@ nav{
         margin-bottom: 10px;
     }
 }
+@media (max-width: 600px) {
+    body {
+        font-size: 18px;
+    }
 
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    p {
+        font-size: 1.1rem;
+    }
+    .button-primary,
+    .button-secondary {
+        padding: 18px 24px;
+        font-size: 1.1rem;
+    }
+    section {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    .about-content-left,
+    .where-we-meet-left {
+        padding: 30px 20px;
+}
 
 /* colours
 deep ocean blue: #1F3D44
