Added rules to centre nav ul

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ nav{
     list-style: none;
     display: flex;
     gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 .nav-ul a{
     color: white;
