--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ nav{
 }
 .nav-ul{
     list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
     gap: 20px;
     justify-content: center;
