--- a/styles.css
+++ b/styles.css
@@ -259,26 +259,26 @@ nav{
     /* Font scaling */
     body {
         font-size: 18px;
+        margin: 0;
     }
     h1 {
         font-size: 2.2rem;
     }
     h2 {
-        font-size: 1.75rem;
+        font-size: 2rem;
     }
     p {
         font-size: 1.1rem;
+    }
+    /* Adding a text shadow so it can be seen more clearly on mobile */
+    .hero p{
+        text-shadow: 1px 1px 2px #2B2B2B;
     }
     /* Button styles */
     .button-primary,
     .button-secondary {
         padding: 18px 24px;
         font-size: 1.1rem;
-    }
-    /* Adding padding for sections */
-    section {
-        padding-left: 1rem;
-        padding-right: 1rem;
     }
     /* These sections stack on mobile */
     .about,
@@ -298,6 +298,21 @@ nav{
         min-width: 80%;
         margin: 0;
     }
+    /* Adjusting card height */
+    .values{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .inclusive,
+    .community,
+    .nature,
+    .wellbeing,
+    .notrace{
+        min-height: auto;
+        padding: 15px;
+        flex: none;
+    }
     /* Image sizing for what we do cards */
     .what-we-do img{
     width: 100%;
@@ -308,6 +323,8 @@ nav{
     .where-we-meet-right{
          padding-left: 0;
          padding-right: 0;
+         background-size: cover;
+         background-position: center;
     }
     /* Extra spacing for mobile */
     .about-content-left,
